--- a/Changes
+++ b/Changes
@@ -37,6 +37,16 @@
     * "integral_type" is replaced to "integer_type".
     * "integer_type_except_for_long" is replaced to "integer_type_within_int".
     * Rename SPVM_OP_CHECKER_apply_unary_numeric_widening_conversion in spvm_op_checker.c to SPVM_OP_CHECKER_apply_integer_promotional_conversion
+    * Rename the following functions in spvm_op_checker.c
+      [Before]
+      void SPVM_OP_CHECKER_apply_numeric_to_string_conversion(SPVM_COMPILER* compiler, SPVM_OP* op_term);
+      void SPVM_OP_CHECKER_apply_integer_promotional_conversion(SPVM_COMPILER* compiler, SPVM_OP* op_unary);
+      void SPVM_OP_CHECKER_apply_binary_numeric_conversion(SPVM_COMPILER* compiler, SPVM_OP* op_first, SPVM_OP* op_last);
+      [After]
+      void SPVM_OP_CHECKER_perform_numeric_to_string_conversion(SPVM_COMPILER* compiler, SPVM_OP* op_term);
+      void SPVM_OP_CHECKER_perform_integer_promotional_conversion(SPVM_COMPILER* compiler, SPVM_OP* op_unary);
+      void SPVM_OP_CHECKER_perform_binary_numeric_conversion(SPVM_COMPILER* compiler, SPVM_OP* op_first, SPVM_OP* op_last);
+
 0.9643 2022-08-18
   [Revert]
     * Revert the following changes.
