Add the heading "Integer Promotional Type Conversion"

--- a/Changes
+++ b/Changes
@@ -16,6 +16,8 @@
       Integral Type Within int
       The integral type within int is the integral type within the int type.
       In other words, the integral types within int are the byte type, the short type, and the int type.
+    * Add the heading "Integer Promotional Type Conversion" 
+
   [Document Fix]
     * The heading "Integral Type" is renamed to "Integer Type". This was my English mistake.
       And the contens.
