--- a/Changes
+++ b/Changes
@@ -5,6 +5,12 @@
       (intptr_t)env->object_header_byte_size + sizeof(void*) * 2;
       [After]
       (intptr_t)env->object_header_byte_size + sizeof(SPVM_VALUE) * 2;
+  [Internal Changes Without Effect]
+    * Add the following functions to spvm_api.c
+      SPVM_OBJECT* SPVM_API_new_pointer_with_fields(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, void* pointer, int32_t fields_length);
+      SPVM_OBJECT* SPVM_API_new_pointer_with_fields_by_name(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, void* pointer, int32_t fields_length, int32_t* error, const char* file, int32_t line);
+      SPVM_OBJECT* SPVM_API_new_pointer_with_fields_raw(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, void* pointer, int32_t fields_length);
+    
 0.9645 2022-08-26
   [Incompatible Changes]
     * Remove the following native APIs. These are added 0.9640(2022-08-16)
