--- a/Changes
+++ b/Changes
@@ -21,7 +21,7 @@
       void (*set_pointer_field_float)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, int32_t field_index, float value);
       void (*set_pointer_field_double)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, int32_t field_index, double value);
       void (*set_pointer_field_pointer)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, int32_t field_index, void* value);
-
+    * The pointer class can inherit a pointer class.
   [Needed Resource Changes]
     * The pointer class need the following memory because of the feature that any information can be saved.
       [Before]
