--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9647 2022-08-30
+  [New Features]
+    * Add "protected" attribute.
 0.9646 2022-08-29
   [New Features]
     * Add the following native APIs.
