--- a/Changes
+++ b/Changes
@@ -9,7 +9,7 @@
       int32_t SPVM_OP_is_allowed(SPVM_COMPILER* compiler, SPVM_OP* op_class_current, SPVM_OP* op_class_dist);
       [After]
       int32_t SPVM_OP_is_allowed(SPVM_COMPILER* compiler, SPVM_CLASS* class_current, SPVM_CLASS* class_dist);
-
+    * Add SPVM_OP_CHECKER_can_access.
 0.9646 2022-08-29
   [New Features]
     * Add the following native APIs.
