Implement the compilation error check of "protected" field.
  [New Features]
    * Implement the compilation error check of "protected" field.
  [Compilation Error Messages Improvement]
    * Improve the following compilation error message.
      [Before]
      The private field "x" in the class "MyClass2" can't be accessed
      [After]
      The private field "x" in the class "MyClass2" can't be accessed from the current class "MyClass"

--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
     * Implement the compilation error check of "protected" class.
     * Implement the compilation error check of "protected" method.
     * Implement the compilation error check of "protected" class variable.
+    * Implement the compilation error check of "protected" field.
   [Imcompative Changes]
     * SUPER:: qualifier calls the method of the super class of the current class, instead of the instance.
   [Compilation Error Messages Improvement]
@@ -22,6 +23,11 @@
       The private class variable "$MyClass2::FOO" can't be accessed
       [After]
       The private class variable "$FOO" of the class "MyClass2" can't be accessed from the current class "MyClass"
+    * Improve the following compilation error message.
+      [Before]
+      The private field "x" in the class "MyClass2" can't be accessed
+      [After]
+      The private field "x" in the class "MyClass2" can't be accessed from the current class "MyClass"
       
   [Internal Changes Without Effect]
     * Change the definition of the following function.
