[Internal Changes Without Effect]     * Rename tmp_merged_fields to merged_fields of spvm_class.h.

--- a/Changes
+++ b/Changes
@@ -41,6 +41,7 @@
     * Rename SPVM_OP_build_has to SPVM_OP_build_field.
     * Add compile_ok, compile_ok_file to MyTest.pm.
     * Add merged_fields_original_offset to spvm_class.c and set it.
+    * Rename tmp_merged_fields to merged_fields of spvm_class.h.
 0.9646 2022-08-29
   [New Features]
     * Add the following native APIs.
