Improve many parts. The numeric widening type conversion is replaced with the integer promotional type conversion.
  [Document Improvement]
    * Improve many parts. The numeric widening type conversion is replaced with the integer promotional type conversion.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.9649 2022-08-30
+  [Document Improvement]
+    * Improve the doc of the unary plus operator.
+    * Improve the doc of the unary minus operator.
+    * Improve many parts. The numeric widening type conversion is replaced with the integer promotional type conversion.
+
 0.9648 2022-08-30
   [New Features]
     * Add Pointable module.
